--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "nuxt-typed-vuex": "^0.1.22",
+    "socket.io-client": "^4.0.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
