--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.1",
+    "@nuxtjs/auth-next": "5.0.0-1618898588.9655d0e",
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/toast": "^3.3.1",
+    "chart.js": "2",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
     "nuxt-typed-vuex": "^0.1.22",
-    "socket.io-client": "^4.0.1"
+    "socket.io-client": "^4.0.1",
+    "vue-chartjs": "^3.5.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
