--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/toast": "^3.3.1",
     "chart.js": "2",
     "core-js": "^3.8.3",
+    "dayjs": "^1.10.4",
     "nuxt": "^2.14.12",
     "nuxt-typed-vuex": "^0.1.22",
     "socket.io-client": "^4.0.1",
