Setup gg map api

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nuxt-typed-vuex": "^0.1.22",
     "socket.io-client": "^4.0.1",
     "vue-chartjs": "^3.5.1",
-    "vue-markdown": "^2.2.4"
+    "vue-markdown": "^2.2.4",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
